--- a/django/django-instagram-clone_kindfamily/instaclone-frontend/detail-page.html
+++ b/django/django-instagram-clone_kindfamily/instaclone-frontend/detail-page.html
@@ -2,8 +2,8 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>instagram - clone</title>
 
     <meta name="mobile-web-app-capable" content="yes" />
@@ -26,7 +26,6 @@
     <meta itemprop="description" content="instagram clone" />
     <meta itemprop="image" content="http://kindtiger.dothome.co.kr/insta/imgs/instagram.jpeg" />
 
-    <title>instagram</title>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -231,11 +230,7 @@
       </div>
     </section>
 
-    <script
-      src="https://code.jquery.com/jquery-3.6.0.min.js"
-      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <!--<script src="js/detail.js"></script>-->
   </body>
 </html>
