--- a/django/django-instagram-clone_kindfamily/instaclone-frontend/index.html
+++ b/django/django-instagram-clone_kindfamily/instaclone-frontend/index.html
@@ -2,8 +2,8 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>instagram - clone</title>
 
     <link rel="stylesheet" href="./css/reset.css" />
@@ -215,6 +215,7 @@
                 <div class="upload_btn m_text" data-name="comment">게시</div>
               </div>
             </article>
+
             <article class="contents">
               <header class="top">
                 <div class="user_container">
@@ -273,7 +274,9 @@
                 <input type="text" placeholder="댓글달기..." />
                 <div class="upload_btn m_text" data-name="comment">게시</div>
               </div>
-            </article><article class="contents">
+            </article>
+
+            <article class="contents">
               <header class="top">
                 <div class="user_container">
                   <div class="profile_img">
@@ -331,7 +334,9 @@
                 <input type="text" placeholder="댓글달기..." />
                 <div class="upload_btn m_text" data-name="comment">게시</div>
               </div>
-            </article><article class="contents">
+            </article>
+
+            <article class="contents">
               <header class="top">
                 <div class="user_container">
                   <div class="profile_img">
@@ -389,7 +394,9 @@
                 <input type="text" placeholder="댓글달기..." />
                 <div class="upload_btn m_text" data-name="comment">게시</div>
               </div>
-            </article><article class="contents">
+            </article>
+
+            <article class="contents">
               <header class="top">
                 <div class="user_container">
                   <div class="profile_img">
@@ -560,11 +567,7 @@
       </section>
     </section>
 
-    <script
-      src="https://code.jquery.com/jquery-3.6.0.min.js"
-      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
   </body>
 </html>
