--- a/django/django-instagram-clone_kindfamily/instaclone-frontend/profile.html
+++ b/django/django-instagram-clone_kindfamily/instaclone-frontend/profile.html
@@ -2,8 +2,8 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>instagram - clone</title>
 
     <!-- Facebook Meta Tags / 페이스북 오픈 그래프 -->
