--- a/django/django-instagram-clone_kindfamily/instaclone-frontend/index.html
+++ b/django/django-instagram-clone_kindfamily/instaclone-frontend/index.html
@@ -41,45 +41,45 @@
       <div class="hidden_menu">
         <div class="scroll_inner">
           <div class="user">
-            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필사진"></div>
+            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필이미지"></div>
             <div class="id">kind_tigerrrr</div>
           </div>
 
           <!-- 이하 히든 메뉴 사용자 중복 내용 -->
           <div class="user">
-            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필사진"></div>
+            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필이미지"></div>
             <div class="id">kind_tigerrrr</div>
           </div>
           <div class="user">
-            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필사진"></div>
+            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필이미지"></div>
             <div class="id">kind_tigerrrr</div>
           </div>
           <div class="user">
-            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필사진"></div>
+            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필이미지"></div>
             <div class="id">kind_tigerrrr</div>
           </div>
           <div class="user">
-            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필사진"></div>
+            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필이미지"></div>
             <div class="id">kind_tigerrrr</div>
           </div>
           <div class="user">
-            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필사진"></div>
+            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필이미지"></div>
             <div class="id">kind_tigerrrr</div>
           </div>
           <div class="user">
-            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필사진"></div>
+            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필이미지"></div>
             <div class="id">kind_tigerrrr</div>
           </div>
           <div class="user">
-            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필사진"></div>
+            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필이미지"></div>
             <div class="id">kind_tigerrrr</div>
           </div>
           <div class="user">
-            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필사진"></div>
+            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필이미지"></div>
             <div class="id">kind_tigerrrr</div>
           </div>
           <div class="user">
-            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필사진"></div>
+            <div class="thumb_img"><img src="./images/thumb.jpeg" alt="프로필이미지"></div>
             <div class="id">kind_tigerrrr</div>
           </div>
         </div>
@@ -462,7 +462,7 @@
           <div class="side_box">
             <div class="user_profile">
               <div class="profile_thumb">
-                <img src="./images/thumb.jpeg" alt="프로필사진" />
+                <img src="./images/thumb.jpeg" alt="프로필이미지" />
               </div>
               <div class="detail">
                 <div class="id m_text">KindTiger</div>
@@ -478,7 +478,7 @@
               <div class="scroll_inner">
                 <div class="thumb_user">
                   <div class="profile_thumb">
-                    <img src="./images/thumb02.jpg" alt="프로필사진" />
+                    <img src="./images/thumb02.jpg" alt="프로필이미지" />
                   </div>
                   <div class="detail">
                     <div class="id">kind_tigerrrr</div>
@@ -489,7 +489,7 @@
                 <!-- 이하 사용자 썸네일 중복 내용 -->
                 <div class="thumb_user">
                   <div class="profile_thumb">
-                    <img src="./images/thumb02.jpg" alt="프로필사진" />
+                    <img src="./images/thumb02.jpg" alt="프로필이미지" />
                   </div>
                   <div class="detail">
                     <div class="id">kind_tigerrrr</div>
@@ -498,7 +498,7 @@
                 </div>
                 <div class="thumb_user">
                   <div class="profile_thumb">
-                    <img src="./images/thumb02.jpg" alt="프로필사진" />
+                    <img src="./images/thumb02.jpg" alt="프로필이미지" />
                   </div>
                   <div class="detail">
                     <div class="id">kind_tigerrrr</div>
@@ -507,7 +507,7 @@
                 </div>
                 <div class="thumb_user">
                   <div class="profile_thumb">
-                    <img src="./images/thumb02.jpg" alt="프로필사진" />
+                    <img src="./images/thumb02.jpg" alt="프로필이미지" />
                   </div>
                   <div class="detail">
                     <div class="id">kind_tigerrrr</div>
@@ -516,7 +516,7 @@
                 </div>
                 <div class="thumb_user">
                   <div class="profile_thumb">
-                    <img src="./images/thumb02.jpg" alt="프로필사진" />
+                    <img src="./images/thumb02.jpg" alt="프로필이미지" />
                   </div>
                   <div class="detail">
                     <div class="id">kind_tigerrrr</div>
@@ -534,7 +534,7 @@
 
               <div class="thumb_user">
                 <div class="profile_thumb">
-                  <img src="./images/thumb02.jpg" alt="프로필사진" />
+                  <img src="./images/thumb02.jpg" alt="프로필이미지" />
                 </div>
                 <div class="detail">
                   <div class="id">kind_tigerrrr</div>
@@ -545,7 +545,7 @@
               <!-- 이하 사용자 썸네일 중복 내용 -->
               <div class="thumb_user">
                 <div class="profile_thumb">
-                  <img src="./images/thumb02.jpg" alt="프로필사진" />
+                  <img src="./images/thumb02.jpg" alt="프로필이미지" />
                 </div>
                 <div class="detail">
                   <div class="id">kind_tigerrrr</div>
@@ -554,7 +554,7 @@
               </div>
               <div class="thumb_user">
                 <div class="profile_thumb">
-                  <img src="./images/thumb02.jpg" alt="프로필사진" />
+                  <img src="./images/thumb02.jpg" alt="프로필이미지" />
                 </div>
                 <div class="detail">
                   <div class="id">kind_tigerrrr</div>
