--- a/django/django-instagram-clone_kindfamily/instaclone-frontend/new_post.html
+++ b/django/django-instagram-clone_kindfamily/instaclone-frontend/new_post.html
@@ -87,10 +87,10 @@
                 rows="5"
                 placeholder="140자 까지 등록 가능합니다.
 #태그명 을 통해서 검색 태그를 등록할 수 있습니다.
-예시 : I # love # insta!"
+예시: I # love # insta!"
               ></textarea>
             </p>
-            <input class="submit_btn" type="submit" value="저장" />
+            <input type="submit" class="submit_btn" value="저장" />
           </form>
         </div>
       </div>
