--- a/django/django-instagram-clone_kindfamily/instaclone-frontend/detail-page.html
+++ b/django/django-instagram-clone_kindfamily/instaclone-frontend/detail-page.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/detail-page.css" />
-    <link rel="shortcut icon" href="imgs/instagram.png" />
+    <link rel="shortcut icon" href="images/instagram.png" />
 
     <style>
       #main_container {
@@ -72,7 +72,7 @@
             <article class="contents cont01">
               <div class="img_section">
                 <div class="trans_inner">
-                  <div><img src="imgs/img_section/img03.jpg" alt="" /></div>
+                  <div><img src="images/img_section/img03.jpg" alt="" /></div>
                 </div>
               </div>
 
@@ -80,7 +80,7 @@
                 <header class="top">
                   <div class="user_container">
                     <div class="profile_img">
-                      <img src="imgs/thumb.jpeg" alt="" />
+                      <img src="images/thumb.jpg" alt="" />
                     </div>
                     <div class="user_name">
                       <div class="nick_name">KindTiger</div>
@@ -98,7 +98,7 @@
 
                 <section class="scroll_section">
                   <div class="admin_container">
-                    <div class="admin"><img src="imgs/thumb.jpeg" alt="user" /></div>
+                    <div class="admin"><img src="{% static 'images/thumb01.jpeg' %}" alt="user" /></div>
                     <div class="comment">
                       <span class="user_id">Kindtiger</span>강아지가 많이 힘든가보다ㅜㅜㅜㅜㅜ조금만힘내
                       <div class="time">2시간</div>
@@ -106,7 +106,7 @@
                   </div>
 
                   <div class="user_container-detail">
-                    <div class="user"><img src="imgs/thumb02.jpg" alt="user" /></div>
+                    <div class="user"><img src="{% static 'images/thumb02.jpg' %}" alt="user" /></div>
                     <div class="comment">
                       <span class="user_id">in0.lee</span>너무귀엽네요 ㅎㅎㅎ맞팔해요~!
                       <div class="time">2시간 <span class="try_comment">답글 달기</span></div>
@@ -122,7 +122,7 @@
                   </div>
 
                   <div class="user_container-detail">
-                    <div class="user"><img src="imgs/thumb03.jpg" alt="user" /></div>
+                    <div class="user"><img src="images/thumb03.jpg" alt="user" /></div>
                     <div class="comment">
                       <span class="user_id">ye_solkim</span>강아지 이름이 뭐에요???
                       <div class="time">2시간 <span class="try_comment">답글 달기</span></div>
@@ -138,7 +138,7 @@
                   </div>
 
                   <div class="user_container-detail">
-                    <div class="user"><img src="imgs/thumb02.jpg" alt="user" /></div>
+                    <div class="user"><img src="{% static 'images/thumb02.jpg' %}" alt="user" /></div>
                     <div class="comment">
                       <span class="user_id">in0.lee</span>너무귀엽네요 ㅎㅎㅎ맞팔해요~!
                       <div class="time">2시간 <span class="try_comment">답글 달기</span></div>
@@ -154,7 +154,7 @@
                   </div>
 
                   <div class="user_container-detail">
-                    <div class="user"><img src="imgs/thumb03.jpg" alt="user" /></div>
+                    <div class="user"><img src="images/thumb03.jpg" alt="user" /></div>
                     <div class="comment">
                       <span class="user_id">in0.lee</span>너무귀엽네요
                       <div class="time">2시간 <span class="try_comment">답글 달기</span></div>
@@ -170,7 +170,7 @@
                   </div>
 
                   <div class="user_container-detail">
-                    <div class="user"><img src="imgs/thumb02.jpg" alt="user" /></div>
+                    <div class="user"><img src="{% static 'images/thumb02.jpg' %}" alt="user" /></div>
                     <div class="comment">
                       <span class="user_id">in0.lee</span>너무귀엽네요 ㅎㅎㅎ맞팔해요~!
                       <div class="time">2시간 <span class="try_comment">답글 달기</span></div>
