--- a/django/django-instagram-clone_kindfamily/instaclone-frontend/follow.html
+++ b/django/django-instagram-clone_kindfamily/instaclone-frontend/follow.html
@@ -11,18 +11,18 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="instagram" />
     <meta property="og:description" content="instagram clone" />
-    <meta property="og:image" content="http://kindtiger.dothome.co.kr/insta/images/instagram.jpeg" />
+    <meta property="og:image" content="http://kindtiger.dothome.co.kr/insta/imgs/instagram.jpeg" />
     .
     <!-- Twitter Meta Tags / 트위터 -->
     <meta name="twitter:card" content="instagram clone" />
     <meta name="twitter:title" content="instagram" />
     <meta name="twitter:description" content="instagram clone" />
-    <meta name="twitter:image" content="http://kindtiger.dothome.co.kr/insta/images/instagram.jpeg" />
+    <meta name="twitter:image" content="http://kindtiger.dothome.co.kr/insta/imgs/instagram.jpeg" />
 
     <!-- Google / Search Engine Tags / 구글 검색 엔진 -->
     <meta itemprop="name" content="instagram" />
     <meta itemprop="description" content="instagram clone" />
-    <meta itemprop="image" content="http://kindtiger.dothome.co.kr/insta/images/instagram.jpeg" />
+    <meta itemprop="image" content="http://kindtiger.dothome.co.kr/insta/imgs/instagram.jpeg" />
 
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/common.css" />
@@ -72,7 +72,7 @@
               <header class="top">
                 <div class="user_container">
                   <div class="profile_img">
-                    <img src="./images/thumb.jpeg" alt="프로필이미지" />
+                    <img src="./images/thumb.jpg" alt="프로필이미지" />
                   </div>
                   <div class="user_name">
                     <div class="nick_name m_text">KindTiger</div>
