--- a/django/django-instagram-clone_kindfamily/instaclone-frontend/new_post.html
+++ b/django/django-instagram-clone_kindfamily/instaclone-frontend/new_post.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/new_post.css" />
-    <link rel="shortcut icon" href="./imgs/instagram.png" />
+    <link rel="shortcut icon" href="./images/instagram.png" />
   </head>
   <body>
     <section id="container">
