--- a/react/web-dev-React-inflearn/Part01_vanilla_js/index.html
+++ b/react/web-dev-React-inflearn/Part01_vanilla_js/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Lecture React</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
@@ -22,6 +22,6 @@
       </div>
     </div>
 
-    <script type="module" src="src/main.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
