--- a/react/web-dev-React-inflearn/Part01_vanilla_js/index.html
+++ b/react/web-dev-React-inflearn/Part01_vanilla_js/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Lecture React</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Lecture React | vanilla.js</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
