--- a/django/django-instagram-clone_kindfamily/instaclone-frontend/new_post.html
+++ b/django/django-instagram-clone_kindfamily/instaclone-frontend/new_post.html
@@ -72,7 +72,7 @@
                   </div>
                   <p>포스트 이미지 추가</p>
                   <canvas id="imageCanvas"></canvas>
-                  <!--<p><img id="img_id" src="#" style="width: 300px; height: 300px; object-fit: cover" alt="thumbnail"></p>-->
+                  <!--<p><img id="img_id" src="#" style="width: 300px; height: 300px; object-fit: cover;" alt="thumbnail"></p>-->
                 </div>
               </div>
             </div>
